workday/15.0/modules/ROOT/pages/workday-connector-troubleshoot.adoc
= Troubleshooting Workday Connector 15.0 - Mule 4

To troubleshoot Anypoint Connector for Workday (Workday Connector), become familiar with the information about addressing specific common errors and interpreting commonly thrown exception messages.

include::connectors::partial$ssl-logs.adoc[]

include::connectors::partial$verbose-exception-logs.adoc[]

include::connectors::partial$verbose-logs-com.adoc[]

== Troubleshoot Common Errors

Here is a list of the common Workday Connector errors and how to resolve them:

* <<connectivity-errors>>
* <<remove-the-warning-on-every-http-call>>
* <<timeout-in-studio>>
* <<get-degrees-error>> 

[[connectivity-errors]]
=== Connectivity Errors

The connector throws `CONNECTIVITY` errors to trigger the reconnection process. If the connector throws a `CONNECTIVITY` error and reconnection is configured for the configuration that throws the error, the connector recreates the session and retries the operation automatically.

The reconnection process is handled by Mule runtime and comes with some exceptions, for example, if a `CONNECTIVITY` error is thrown during the connection creation process, then the reconnection is not triggered even if reconnection is configured. This is because the `CONNECTIVITY` error occurs while connecting to the third-party system, so the `CONNECTIVITY` error (usually caused by expired credentials or misconfiguration) is likely to occur every time, which retries the reconnection as many times as the reconnection is configured. It is the user's responsibility to handle `CONNECTIVITY` errors if they are thrown during connection creation.

[[remove-the-warning-on-every-http-call]]
=== Remove the Warning on Every HTTP Call

Workday Connector logs the following warning message on every HTTP call:

[source,xml,linenums]
----
WARN  2020-11-10 10:51:57,494 [[MuleRuntime].uber.12: [workday].workdayFlow.BLOCKING @766054e8] [processor: ; event: 5ec7a670-233a-11eb-a099-f018989d247f] com.ning.http.client.RequestBuilderBase: Value was null, set to ""
----

To remove this warning from the Anypoint Studio console, update `src/main/resources/log4j2.xml` with the following line:

[source,xml,linenums]
----
<AsyncLogger name="com.ning.http.client.RequestBuilderBase" level="ERROR"/>
----

[[timeout-in-studio]]
=== Timeout in Studio

Due to connectivity issues, you might experience a timeout while obtaining metadata from Workday Connector and receive one of the following errors:

* Error While Retrieving SOAP Client ID
+
[source,text,linenums]
----
org.mule.runtime.api.exception.MuleRuntimeException: Error while retrieving soap client id [Absence_Management]
  org.mule.runtime.api.exception.MuleRuntimeException: Error while retrieving soap client id [Absence_Management]
  Caused by: java.util.concurrent.ExecutionException:
  org.mule.wsdl.parser.exception.WsdlParsingException: Error processing
  WSDL file [https://wd3-impl-services1.workday.com/ccx/service/deakin_amu1/Absence_Management/v29.1?wsdl]:
  Unable to locate document at 'https://wd3-impl-services1.workday.com/ccx/service/deakin_amu1/Absence_Management/v29.1?wsdl&#39;.
----

* Mule Agent REST Service Timed Out
+
[source,text,linenums]
----
org.mule.tooling.client.api.exception.TimeoutException: Mule Agent REST service timed out
  org.mule.tooling.client.api.exception.TimeoutException: Mule Agent REST service timed out
  javax.ws.rs.ProcessingException: java.net.SocketTimeoutException: Read timed out
  	at org.glassfish.jersey.client.HttpUrlConnector.apply(HttpUrlConnector.java:244)
  	at org.glassfish.jersey.client.ClientRuntime.invoke(ClientRuntime.java:245)
  	at org.glassfish.jersey.client.JerseyInvocation$1.call(JerseyInvocation.java:671)
  	at org.glassfish.jersey.client.JerseyInvocation$1.call(JerseyInvocation.java:668)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:315)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:297)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:228)
  	at org.glassfish.jersey.process.internal.RequestScope.runInScope(RequestScope.java:444)
  	at org.glassfish.jersey.client.JerseyInvocation.invoke(JerseyInvocation.java:668)
  	at
----

To resolve this error:

Increase the timeout values in Anypoint Studio:

. In Anypoint Studio, go to *Preferences > Anypoint Studio > Tooling*.
. Increase the values to double the default value for `Default Connection Timeout` and `Default Read Timeout`.
. Click *Apply* and restart Studio.

[[get-degrees-error]]
=== Get Degrees Error When Testing the Connection 

When validating connectivity using the *Test Connection* button, you might encounter an error regarding the `Get_Degrees` operation:

[source,text,linenums]
----
org.mule.runtime.api.exception.MuleRuntimeException: java.lang.RuntimeException: Unexpected error while consuming the web service operation [Get_Degrees]
----

To validate connectivity using the *Test Connection* button, Workday Connector uses a `Performance_Management` service with the `Get_Degrees` operation. You must ensure that your service account has the required permissions to operate on that service. To resolve this error, grant permissions for the `Get_Degrees` operation in the `Performance_Management` web service.

== Understand Commonly Thrown Exceptions

Here is a list of commonly thrown exception messages and how to interpret them:

* WORKDAY:CONNECTIVITY

 A connection cannot be established.

* WORKDAY:PROCESSING_ERROR

 A processing error occurs, for example, the connector cannot read from the inbound message.

* WORKDAY:RETRY_EXHAUSTED

 The maximum number of retries for the operation is reached.

* WORKDAY:VALIDATION_ERROR

 A validation error occurs, for example, an inactive organization includes an active organization.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:workday-reference.adoc[Workday Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
